--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -46,9 +46,9 @@
             <version>1.4.7</version>
         </dependency>
         <dependency>
-            <groupId>com.sun.activation</groupId>
-            <artifactId>all</artifactId>
-            <version>1.2.0</version>
+           <groupId>com.sun.activation</groupId>
+           <artifactId>javax.activation</artifactId>
+           <version>1.2.0</version>
         </dependency>
     </dependencies>
 
