--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,9 @@
             <version>8.0.16</version>
         </dependency>
         <dependency>
-            <groupId>com.sun.mail</groupId>
-            <artifactId>all</artifactId>
-            <version>1.4.7</version>
+             <groupId>com.sun.mail</groupId>
+             <artifactId>javax.mail</artifactId>
+             <version>1.6.2</version>
         </dependency>
         <dependency>
            <groupId>com.sun.activation</groupId>
